<resources>
    <string name="app_name">Food+</string>
    <string name="Login">Login</string>
    <string name="Signup">Sign up</string>
    <string name="food">Food+</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="welcome_to_the_dashboard">Welcome to the Dashboard!</string>
    <string name="enter_ingredient">Enter Ingredient</string>
    <string name="add">+</string>
    <string name="done">Done</string>
    <string name="recipe_ingredients">Recipe ingredients</string>
    <string name="recipe_name">Recipe name</string>
    <string name="ingredients">ingredients</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="auto_login">Auto Login</string>
    <string name="plus">+</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="welcome_message">"Welcome "</string>
    <string name="enter_count" />
    <string name="cancel">Cancel</string>
    <string name="user_information">User Information</string>
    <string name="name">Name:</string>
    <string name="enter_sms_message">Enter SMS message</string>
    <string name="send">Send</string>
    <string name="Recipe_count">Recipe Count:</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="menu_share">Share</string>
    <string name="Ingredients">Ingredients </string>
    <string name="ingredientCount">Quantity</string>/>
    <string name="kg">kg</string>
    <string name="gr">gr</string>
    <string name="cup">cup</string>
    <string name="spoon">spoon</string>
    <string name="piece">piece</string>
    <string name="liter">liter</string>
    <string name="iconDescription">Icon</string>
    <string name="ingredientName">Ingredient Name</string>
    <string name="signUpBtn">Submit</string>
    <string name="subTitleStart">to Food+</string>
</resources>