<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredients_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1E8E8"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:paddingRight="10dp">

    <ImageView
        android:id="@+id/share"
        android:layout_width="33dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="130dp"
        android:background="#F1E8E8"
        android:contentDescription="@string/done"
        android:src="@drawable/ic_share"
        tools:srcCompat="@drawable/ic_share" />

    <ImageView
        android:id="@+id/checkMark"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="65dp"
        android:background="#F1E8E8"
        android:contentDescription="@string/done"
        android:src="@drawable/ic_check"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#F1E8E8"
        android:contentDescription="@string/done"
        android:src="@drawable/ic_x" />

    <EditText
        android:id="@+id/recipe_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:hint="@string/recipe_name"
        android:inputType=""
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="RtlSymmetry" />

    <ScrollView
        android:id="@+id/ingredientsScrollView"
        android:layout_width="401dp"
        android:layout_height="660dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="59dp"
        android:background="#F1E8E8"
        android:contentDescription="@string/ingredients"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:id="@+id/ingredientsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <Spinner
        android:id="@+id/ingredientSpinner"
        android:layout_width="177dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="50dp"
        android:dropDownWidth="match_parent"
        android:dropDownHeight="200dp"
        android:paddingStart="5dp"
        android:textColor="@color/black"
        android:textColorHint="#000000"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/ingredientCountEditText"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/ingredientSpinner"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/addButton"
        android:layout_toEndOf="@+id/ingredientSpinner"
        android:autofillHints="amount"
        android:hint="@string/enter_count"
        android:inputType="number|numberDecimal"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ingredientSpinner"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add"
        android:textSize="20sp"
        />

    <RadioGroup
        android:id="@+id/units"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:checkedButton="@+id/gr">

        <RadioButton
            android:id="@+id/kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/gr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gr"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/cup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cup"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/spoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spoon"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/piece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/piece"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/liter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liter"
            android:textColor="@color/black" />

    </RadioGroup>

</RelativeLayout>
