<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E2E2"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="username"
        android:textColor="#333333"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:autofillHints="password"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#333333"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />


<!--    <CheckBox-->
<!--        android:id="@+id/auto_login_checkbox"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="60dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:checked="false"-->
<!--        android:text="@string/auto_login"-->
<!--        android:textColor="#333333"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/password" />-->

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="230dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="230dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/Signup"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="145dp"
        android:layout_height="57dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="177dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/food"
        android:textAlignment="center"
        android:textColor="@color/main_purple"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="107dp"
        android:layout_height="81dp"
        android:contentDescription="@string/iconDescription"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.487"
        app:srcCompat="@drawable/recipe_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>